Patch group info
